[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = sunkitsst
description = Astropy affiliated package
long_description = This is a package for opening SST/IRIS 4D cubees and relies on astropy and sunpy
author = Stuart Mumford, Nabil Freij
author_email = stuart@mumford.me.uk, nabil.freij@gmail.com
license = BSD
url = http://sunpy.org/
edit_on_github = False
github_project = nabobalis/sunkit-sst

[entry_points]
astropy-package-template-example = packagename.example_mod:main
